--- a/modules/professions/client/views/list-professions.client.view.html
+++ b/modules/professions/client/views/list-professions.client.view.html
@@ -2,6 +2,10 @@
   <div class="page-header">
     <h1>Classes</h1>
   </div>
+  <div>
+    <button type="button" class="btn btn-primary" data-ui-sref="professions.create">Create a New Class</button>
+    <br>
+  </div>
   <div class="list-group">
     <a data-ng-repeat="profession in vm.professions"
        data-ui-sref="professions.view({ professionId: profession._id })"
@@ -15,8 +19,5 @@
       </small>
       <h4 class="list-group-item-heading" data-ng-bind="profession.name"></h4>
     </a>
-  </div>
-  <div class="alert alert-warning text-center" data-ng-if="vm.professions.$resolved && !vm.professions.length">
-    No Professions yet, why don't you <a data-ui-sref="professions.create">create one</a>?
   </div>
 </section>
