--- a/modules/professions/client/views/list-professions.client.view.html
+++ b/modules/professions/client/views/list-professions.client.view.html
@@ -8,15 +8,8 @@
   </div>
   <div class="list-group">
     <a data-ng-repeat="profession in vm.professions"
-       data-ui-sref="professions.view({ professionId: profession._id })"
+       data-ui-sref="professions.edit({ professionId: profession._id })"
        class="list-group-item">
-      <small class="list-group-item-text">
-        Posted on
-        <span data-ng-bind="profession.created | date:'mediumDate'"></span>
-        by
-        <span data-ng-if="profession.user" data-ng-bind="profession.user.displayName"></span>
-        <span data-ng-if="!profession.user">Deleted User</span>
-      </small>
       <h4 class="list-group-item-heading" data-ng-bind="profession.name"></h4>
     </a>
   </div>
