--- a/modules/races/client/views/list-races.client.view.html
+++ b/modules/races/client/views/list-races.client.view.html
@@ -2,21 +2,15 @@
   <div class="page-header">
     <h1>Races</h1>
   </div>
+  <div>
+    <button type="button" class="btn btn-primary" data-ui-sref="races.create">Create a New Race</button>
+    <br>
+  </div>
   <div class="list-group">
     <a data-ng-repeat="race in vm.races"
-       data-ui-sref="races.view({ raceId: race._id })"
+       data-ui-sref="races.edit({ raceId: race._id })"
        class="list-group-item">
-      <small class="list-group-item-text">
-        Posted on
-        <span data-ng-bind="race.created | date:'mediumDate'"></span>
-        by
-        <span data-ng-if="race.user" data-ng-bind="race.user.displayName"></span>
-        <span data-ng-if="!race.user">Deleted User</span>
-      </small>
       <h4 class="list-group-item-heading" data-ng-bind="race.name"></h4>
     </a>
-  </div>
-  <div class="alert alert-warning text-center" data-ng-if="vm.races.$resolved && !vm.races.length">
-    No Races yet, why don't you <a data-ui-sref="races.create">create one</a>?
   </div>
 </section>
