Character creation uses new class and race modules

--- a/modules/characters/client/views/creationHelp/character.creation.basics.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.basics.help.view.html
@@ -3,9 +3,20 @@
 </p>
 
 <div ng-show="vm.character.race">
-  <p><b>{{vm.character.race}}:</b>  {{vm.getRaceDescription()}}</p>
+  <div class="row">
+    <div class="col-xs-1 glyphicon glyphicon-info-sign"></div>
+    <div class="col-xs-11">
+      <b>{{vm.character.race.name}}</b><p>{{vm.character.race.description}}</p>
+    </div>
+  </div>
 </div>
 
-<div ng-show="vm.character.playableClass">
-  <p><b>{{vm.character.playableClass}}:</b>  {{vm.getClassDescription()}}</p>
+
+<div ng-show="vm.character.playableClass[0]">
+  <div class="row">
+    <div class="col-xs-1 glyphicon glyphicon-info-sign"></div>
+    <div class="col-xs-11">
+      <b>{{vm.character.playableClass[0].name}}</b> <p>{{vm.character.playableClass[0].description}}</p>
+    </div>
+  </div>
 </div>
