--- a/modules/items/client/views/list-items.client.view.html
+++ b/modules/items/client/views/list-items.client.view.html
@@ -1,10 +1,10 @@
 <section>
   <div class="page-header">
+    <div class="pull-right">
+      <button type="button" class="btn btn-primary" data-ui-sref="items.create">
+          <i class="glyphicon glyphicon-pencil"></i> Create a New Item</button>
+    </div>
     <h1>Items</h1>
-  </div>
-  <div>
-    <button type="button" class="btn btn-primary" data-ui-sref="items.create">Create a New Item</button>
-    <br>
   </div>
   <div class="list-group">
     <a data-ng-repeat="item in vm.items"
