--- a/modules/races/client/views/form-race.client.view.html
+++ b/modules/races/client/views/form-race.client.view.html
@@ -34,33 +34,33 @@
           ng-click="$event.stopPropagation()">
           <div class="col-xs-3">
             <b>STR</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.strength">
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Strength">
           </div>
           <div class="col-xs-3">
             <b>DEX</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.dexterity">
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Dexterity">
           </div>
           <div class="col-xs-3">
             <b>CON</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.constitution">
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Constitution">
           </div>
           <div class="col-xs-3">
             <b>Choice</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.choice">
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Choice">
           </div>
         </div>
         <div class="row">
           <div class="col-xs-3">
             <b>INT</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.intelligence">
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Intelligence">
           </div>
           <div class="col-xs-3">
             <b>WIS</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.wisdom">
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Wisdom">
           </div>
           <div class="col-xs-3">
             <b>CHA</b>
-            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.charisma"></input>
+            <input class="form-control att-entry" type="number" ng-model="vm.race.abilityIncreases.Charisma"></input>
           </div>
         </div>
         <hr>
