--- a/modules/professions/client/views/list-professions.client.view.html
+++ b/modules/professions/client/views/list-professions.client.view.html
@@ -1,10 +1,10 @@
 <section>
   <div class="page-header">
+    <div class="pull-right">
+      <button type="button" class="btn btn-primary" data-ui-sref="professions.create">
+          <i class="glyphicon glyphicon-pencil"></i> Create a New Class</button>
+    </div>
     <h1>Classes</h1>
-  </div>
-  <div>
-    <button type="button" class="btn btn-primary" data-ui-sref="professions.create">Create a New Class</button>
-    <br>
   </div>
   <div class="list-group">
     <a data-ng-repeat="profession in vm.professions"
@@ -12,5 +12,8 @@
        class="list-group-item">
       <h4 class="list-group-item-heading" data-ng-bind="profession.name"></h4>
     </a>
+  </div>
+  <div class="alert alert-warning text-center" data-ng-if="vm.professions.$resolved && !vm.professions.length">
+    No Classes have been created yet.
   </div>
 </section>
