--- a/modules/feats/client/views/list-feats.client.view.html
+++ b/modules/feats/client/views/list-feats.client.view.html
@@ -4,7 +4,7 @@
       <button type="button" class="btn btn-primary" data-ui-sref="feats.create">
           <i class="glyphicon glyphicon-pencil"></i> Create a New Feat</button>
     </div>
-    <h1>Backgrounds</h1>
+    <h1>Feats</h1>
   </div>
   <div class="list-group">
     <a data-ng-repeat="feat in vm.feats"
