--- a/modules/backgrounds/client/views/form-background.client.view.html
+++ b/modules/backgrounds/client/views/form-background.client.view.html
@@ -32,7 +32,7 @@
           <h4>Traits</h4>
           <div ng-repeat="trait in vm.background.traits track by $index">
             <p class="input-group">
-              <input type="text" ng-model="trait" class="form-control">
+              <input type="text" ng-model="vm.background.traits[$index]" class="form-control">
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="vm.background.traits.splice($index, 1)">
                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -46,7 +46,7 @@
           <h4>Ideals</h4>
           <div ng-repeat="ideal in vm.background.ideals track by $index">
             <p class="input-group">
-              <input type="text" ng-model="ideal" class="form-control">
+              <input type="text" ng-model="vm.background.ideals[$index]" class="form-control">
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="vm.background.ideals.splice($index, 1)">
                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -60,7 +60,7 @@
           <h4>Bonds</h4>
           <div ng-repeat="bond in vm.background.bonds track by $index">
             <p class="input-group">
-              <input type="text" ng-model="bond" class="form-control">
+              <input type="text" ng-model="vm.background.bonds[$index]" class="form-control">
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="vm.background.bonds.splice($index, 1)">
                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -74,7 +74,7 @@
           <h4>Flaws</h4>
           <div ng-repeat="flaw in vm.background.flaws track by $index">
             <p class="input-group">
-              <input type="text" ng-model="trait" class="form-control">
+              <input type="text" ng-model="vm.background.flaws[$index]" class="form-control">
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="vm.background.flaws.splice($index, 1)">
                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
