--- a/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="list-group">
-  <div ng-repeat="item in vm.items" class="row list-group-item">
+  <div ng-repeat="item in vm.loadedData.items" class="row list-group-item">
     <div class="col-sm-4">
       {{item.name}}
     </div>
